add services page. change bootswatch theme

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,3 +30,14 @@ collections:
       - {label: "Path", name: "path", widget: "hidden", default: "/about"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
+
+  - name: "services"
+    label: "Services"
+    folder: "src/pages/Services"
+    create: false
+    slug: "{{slug}}"
+    fields:
+      - {label: "Content Type", name: "contentType", widget: "hidden", default: "services"}
+      - {label: "Path", name: "path", widget: "hidden", default: "/services"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
