--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "author": "David Konsumer <konsumer@jetboystudio.com>",
   "dependencies": {
     "bootstrap": "^4.1.0",
-    "bootswatch": "^4.1.3",
+    "bootswatch": "4.*",
     "gatsby": "^1.9.253",
     "gatsby-link": "^1.6.41",
-    "gatsby-plugin-netlify": "^1.0.21",
-    "gatsby-plugin-offline": "^1.0.18",
+    "gatsby-plugin-netlify": "^1.0.7",
+    "gatsby-plugin-offline": "^1.0.10",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-remark-copy-linked-files": "^1.5.32",
     "gatsby-remark-prismjs": "^2.0.1",
     "gatsby-source-filesystem": "^1.5.33",
     "gatsby-transformer-remark": "^1.7.40",
-    "prismjs": "^1.15.0",
+    "prismjs": "^1.14.0",
     "react-helmet": "^5.2.0",
     "reactstrap": "^6.1.0"
   },
